# wireframe-swraster

./: Cargo.toml  README.md
.cargo/: config.toml
src/: bench.rs  camera.rs  flatshapes.rs  main.rs  math.rs  meshes.rs  object.rs  teapot.glb  teapot.rs
