[package]
name = "graphics"
version = "0.1.0"
authors = ["melvyn2 <melvyn2@brcok.tk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.35.2"
nanorand = "0.5.2"
glam = "0.21.2"
gltf = "1.0.0"

[profile.release]
lto = true
opt-level = 3
