[package]
name = "graphics"
version = "0.1.0"
authors = ["melvyn2 <melvyn2@brcok.tk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.35.2"
nanorand = "0.7.0"
glam = "0.23.0"
gltf = "1.1.0"

[profile.release]
lto = true
opt-level = 3
